# splattar

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  RESULTS.md
.config/: nextest.toml
crates/app-desktop/src/: main.rs
crates/app-vr/: Cargo.toml
crates/app-web/src/: lib.rs
crates/gs-cli/: Cargo.toml
crates/gs-cli/src/: main.rs  project.rs
crates/gs-cli/tests/: add_e2e.rs  android_vo.rs
crates/gs-core/src/: camera.rs  lib.rs  sh.rs  splat.rs
crates/gs-cpu-ref/: Cargo.toml
crates/gs-cpu-ref/src/: backward.rs  forward.rs  lib.rs  math.rs  scene.rs
crates/gs-cpu-ref/tests/: gradcheck.rs
crates/gs-diag/: Cargo.toml
crates/gs-diag/src/: lib.rs  record.rs  window.rs
crates/gs-io/: Cargo.toml
crates/gs-io/examples/: load_ply.rs
crates/gs-io/src/: colmap.rs  lib.rs
crates/gs-io/src/ply/: header.rs  layout.rs  mod.rs  reader.rs  writer.rs
crates/gs-io/tests/: writer_roundtrip.rs
crates/gs-kernels/: Cargo.toml
crates/gs-kernels/src/: binning.rs  lib.rs  rasterizer.rs
crates/gs-kernels/src/shaders/: raster_common.wgsl  rasterize_bwd.wgsl  rasterize_fwd.wgsl  surfel_prep_bwd.wgsl  surfel_prep_fwd.wgsl  tile_binning.wgsl
crates/gs-kernels/tests/: raster_parity.rs
crates/gs-map/: Cargo.toml
crates/gs-map/src/: lib.rs  synthetic.rs
crates/gs-pose/: Cargo.toml
crates/gs-pose/src/: ba.rs  descriptor.rs  detect.rs  fivepoint.rs  image.rs  klt.rs  lib.rs  merge.rs  pairwise.rs  pnp.rs  sim3.rs  triangulate.rs  twoview.rs  vo.rs
crates/gs-pose/tests/: merge_synthetic.rs  vo_synthetic.rs
crates/gs-render/: Cargo.toml
crates/gs-render/examples/: bench_offscreen.rs  render_offscreen.rs
crates/gs-render/src/: golden.rs  lib.rs  offscreen.rs  pipeline.rs
crates/gs-render/src/shaders/: draw_prep.wgsl  preprocess.wgsl
crates/gs-render/tests/: golden.rs
crates/gs-track/: Cargo.toml
crates/gs-track/src/: lib.rs
crates/gs-track/src/shaders/: photometric.wgsl
crates/gs-track/tests/: recover_pose.rs
crates/gs-train/: Cargo.toml
crates/gs-train/examples/: geo_bench.rs
crates/gs-train/src/: appearance.rs  init.rs  lib.rs  normal_loss.rs  optim.rs  plane_sweep.rs  ssim.rs  trainer.rs
crates/gs-train/src/shaders/: adam.wgsl  appearance.wgsl  mcmc.wgsl  normal_loss.wgsl  plane_sweep.wgsl  relocate.wgsl  ssim.wgsl  transform.wgsl
crates/gs-train/tests/: adam.rs  appearance.rs  train_synthetic.rs
crates/gs-video/: Cargo.toml
crates/gs-video/src/: color.rs  h264.rs  h265.rs  hevc_demux.rs  keyframes.rs  lib.rs  mp4_reader.rs  nvdec.rs  nvdec_h265.rs  sharpness.rs
crates/gs-video/tests/: android_decode.rs  hevc_decode.rs
crates/gs-viewer/: Cargo.toml
crates/gs-viewer/src/: camera.rs  frame_player.rs  lib.rs  overlay.rs  windowed.rs
crates/gs-wgpu/: Cargo.toml
crates/gs-wgpu/examples/: bench_sort.rs
crates/gs-wgpu/src/: buffers.rs  context.rs  lib.rs  prefix_sum.rs  profile.rs  sort.rs
crates/gs-wgpu/src/shaders/: prefix_sum.wgsl  radix_sort.wgsl  sort_prep.wgsl
crates/gs-wgpu/tests/: prefix_sum.rs  sort.rs
first_attempt/: PLAN.md
first_attempt/crates/app-desktop/: Cargo.toml
first_attempt/crates/app-vr/src/: main.rs
first_attempt/crates/app-web/: Cargo.toml
first_attempt/crates/gs-cli/src/: main.rs  play.rs  project.rs
first_attempt/crates/gs-cli/tests/: android_vo.rs
first_attempt/crates/gs-core/: Cargo.toml
first_attempt/crates/gs-io/tests/: ply_tests.rs
first_attempt/crates/gs-kernels/examples/: overfit.rs
first_attempt/crates/gs-kernels/src/: binning.rs
first_attempt/crates/gs-kernels/tests/: binning.rs  raster_parity.rs
first_attempt/crates/gs-kernels/tests/common/: mod.rs
first_attempt/crates/gs-pose/: Cargo.toml
first_attempt/crates/gs-pose/src/: ba.rs  detect.rs  fivepoint.rs  image.rs  klt.rs  se3.rs  sim3.rs  spline.rs  twoview.rs  vo.rs
first_attempt/crates/gs-pose/tests/: c2w_convention.rs  vo_synthetic.rs
first_attempt/crates/gs-render/examples/: bench_offscreen.rs  render_offscreen.rs
first_attempt/crates/gs-render/src/: pipeline.rs  scene.rs
first_attempt/crates/gs-render/src/shaders/: preprocess.wgsl  splat_draw.wgsl
first_attempt/crates/gs-train/: Cargo.toml
first_attempt/crates/gs-train/src/: optim.rs  trainer.rs
first_attempt/crates/gs-train/src/shaders/: relocate.wgsl  spawn.wgsl
first_attempt/crates/gs-train/tests/: plane_sweep.rs
first_attempt/crates/gs-video/: Cargo.toml
first_attempt/crates/gs-video/src/: h265.rs  hevc_demux.rs  mp4_reader.rs
first_attempt/crates/gs-viewer/src/: camera.rs  input.rs  lib.rs
first_attempt/crates/gs-wgpu/src/: lib.rs
first_attempt/crates/gs-wgpu/tests/: sort.rs
