# Splattar, second attempt. Architecture: PLAN.md. Working rules: CLAUDE.md.
# The first attempt is frozen under first_attempt/ (its own workspace, excluded
# here) and is reference only.
[workspace]
resolver = "2"
members = []
exclude = ["first_attempt"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95"

# Pinned centrally; crates use `dep.workspace = true`.
[workspace.dependencies]
glam = { version = "0.33", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
wgpu = "30"
pollster = "0.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
half = { version = "2", features = ["bytemuck"] }
rayon = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
winit = "0.30"

[profile.dev]
opt-level = 1

# Anything touching real video or optimization is unusable at opt-level 1.
[profile.release]
debug = true
