# Splattar, second attempt. Architecture: PLAN.md. Working rules: CLAUDE.md.
# The first attempt is frozen under first_attempt/ (its own workspace, excluded
# here) and is reference only.
[workspace]
resolver = "2"
members = [
    "crates/gs-core",
    "crates/gs-wgpu",
    "crates/gs-kernels",
    "crates/gs-cpu-ref",
    "crates/gs-video",
    "crates/gs-diag",
    "crates/gs-map",
    "crates/gs-track",
    "crates/gs-cli",
]
exclude = ["first_attempt"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95"

# Pinned centrally; crates use `dep.workspace = true`.
[workspace.dependencies]
glam = { version = "0.33", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
wgpu = "30"
pollster = "0.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
half = { version = "2", features = ["bytemuck"] }
rayon = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
winit = "0.30"
mp4 = "0.14"
ash = "0.38"
thiserror = "2"
rand = "0.9"

# Workspace members carried from first_attempt/ are listed here with the
# milestone that pulled them across, so the boundary stays auditable.
gs-video = { path = "crates/gs-video" }   # M0: NVDEC decode, carried unchanged
gs-diag = { path = "crates/gs-diag" }     # M0: new — the diagnostic stream
gs-core = { path = "crates/gs-core" }     # M1: splat SoA, camera, SH — carried
gs-wgpu = { path = "crates/gs-wgpu" }     # M1: device, buffers, sort — carried
gs-kernels = { path = "crates/gs-kernels" }   # M1: differentiable rasterizer — carried
gs-cpu-ref = { path = "crates/gs-cpu-ref" }   # M1: gradient oracle — comes WITH the kernels
gs-map = { path = "crates/gs-map" }       # M1: new — the surfel map
gs-track = { path = "crates/gs-track" }   # M2: new — photometric tracking

[profile.dev]
opt-level = 1

# Anything touching real video or optimization is unusable at opt-level 1.
[profile.release]
debug = true
